fix font spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,9 @@ body {
   padding: 1em;
   line-height: 1.5em;
 }
+h1 {
+  line-height: 1em;
+}
 
 /* header and footer areas */
 .menu { padding: 0; }
@@ -18,7 +21,6 @@ body {
 .title { font-size: 1.1em; }
 footer a { text-decoration: none; }
 hr {
-  border-style: dashed;
   color: #ddd;
 }
 
